--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ psycopg2-binary = "*"
 networkx = "*"
 matplotlib = "*"
 python-dotenv = "*"
+py-postgresql = "*"
 
 [requires]
 python_version = "3.7"
