--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -4,9 +4,13 @@ COPY Pipfile* /
 RUN pip install pipenv
 RUN pipenv lock -r > requirements.txt
 RUN pip install -r /requirements.txt
+RUN apt-get -q update && apt-get -qy install netcat
+
 
 COPY . /app
+COPY ./.docker/start.sh /start.sh
+
 WORKDIR /app
 EXPOSE 5000
 
-CMD ["python", "client.py", "--host=0.0.0.0"]
+CMD ["/start.sh"]
