--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,10 @@ services:
       - ./sql/scripts/create_customer.sql:/docker-entrypoint-initdb.d/6-create_customer.sql
       - ./sql/scripts/create_orders.sql:/docker-entrypoint-initdb.d/7-create_orders.sql
       - ./sql/scripts/create_lineitem.sql:/docker-entrypoint-initdb.d/8-create_lineitem.sql
-
   query-visualiser:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: ./.docker/Dockerfile
     env_file:
       - .envs/dev.env
     ports:
