--- a/.envs/dev.env
+++ b/.envs/dev.env
@@ -1,6 +1,6 @@
-POSTGRES_HOST=tcph-db
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_DBNAME=postgres
+POSTGRES_DBNAME=TPC-H
 POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=password
+POSTGRES_PASSWORD=123
 FLASK_ENV=development
