--- a/.envs/dev.env
+++ b/.envs/dev.env
@@ -1,6 +1,6 @@
-POSTGRES_HOST=localhost
+POSTGRES_HOST=tcph-db
 POSTGRES_PORT=5432
-POSTGRES_DBNAME=TPC-H
+POSTGRES_DBNAME=postgres
 POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=123
+POSTGRES_PASSWORD=password
 FLASK_ENV=development
