change postgres to run on port 5433
Change postgres to run on port 5433 instead

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,9 @@ services:
       - ./sql/scripts/create_orders.sql:/docker-entrypoint-initdb.d/7-create_orders.sql
       - ./sql/scripts/create_lineitem.sql:/docker-entrypoint-initdb.d/8-create_lineitem.sql
       - ./sql/scripts/analyze.sql:/docker-entrypoint-initdb.d/9-analyze.sql
+    expose:
+      - "5433"
+    command: -p 5433
 
   query-visualiser:
     build:
