Add default explain

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ psycopg2-binary = "*"
 networkx = "*"
 matplotlib = "*"
 python-dotenv = "*"
+flake8 = "*"
+autopep8 = "*"
 
 [requires]
 python_version = "3.7"
